<resources>
    <string name="app_name">shopping</string>
    <string name="home">home</string>
    <string name="add_shop">add shop</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="save">save</string>
    <string name="count">count</string>
    <string name="price">price</string>
    <string name="delete">delete</string>
    <string name="utf8_star">★</string>
</resources>
