<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_count"
        android:layout_below="@id/et_name"
        android:layout_width="128dp"
        android:hint="@string/count"
        android:inputType="number"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_price"
        android:layout_toEndOf="@id/et_count"
        android:layout_marginStart="4dp"
        android:layout_below="@id/et_name"
        android:layout_marginTop="4dp"
        android:hint="@string/price"
        android:inputType="numberDecimal|numberSigned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>